--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -1,3 +1,40 @@
+
+
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script|Roboto:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+/* @font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+} */
+
+.hotel_name {
+  font-weight: bold
+}
+
+.hotel_image {
+  height: 275px;
+  width: 400px
+}
+
 .App {
   text-align: center;
 }
