portfolio completed.  Increment broken

--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -29,7 +29,7 @@
 }
 
 .title {
-  background-image: url("https://www.fourseasons.com/content/dam/fourseasons/images/web/MAU/MAU_662_aspect16x9.jpg/jcr:content/renditions/cq5dam.web.1280.720.jpeg")
+  background-image: url('https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwj2zZfAxt7kAhUUMH0KHY-eCogQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F155303887192819109%2F&psig=AOvVaw2j80FNqI97t5YU0GlBs0F_&ust=1569039692429227')
 }
 
 @keyframes App-logo-spin {
