added restaurnt to portfolio, exit container

--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -1,6 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script|Roboto&display=swap');
+
+.link {
+  color: white
+}
+
 .hotel_image {
   height: 275px;
   width: 400px
+}
+
+form {
+  color: white;
+  font-family:'Oleo Script', cursive;
+}
+
+#create {
+  color: white;
+  font-family:'Oleo Script', cursive;
+}
+
+.login-signup {
+  font-family:'Roboto'
 }
 
 .App {
@@ -28,8 +48,15 @@
   color: #61dafb;
 }
 
+.app_name {
+  font-family: 'Oleo Script', cursive;
+  font-size: 500%;
+  color: white
+
+}
+
 .title {
-  background-image: url('https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwj2zZfAxt7kAhUUMH0KHY-eCogQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F155303887192819109%2F&psig=AOvVaw2j80FNqI97t5YU0GlBs0F_&ust=1569039692429227')
+  background-image: url('https://i.pinimg.com/originals/b4/51/70/b451702eef24e2c33a90ebcf7c7e9eb8.jpg')
 }
 
 @keyframes App-logo-spin {
