--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -14,6 +14,11 @@ form {
   font-family:'Oleo Script', cursive;
 }
 
+form.bill {
+  color: black;
+  font-family:'Oleo Script', cursive;
+  }
+
 #create {
   color: white;
   font-family:'Oleo Script', cursive;
