--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -8,14 +8,28 @@
 
 div.prevButton {
   position: relative;
-  top: 650px;
-  right: 900px
+  top: 25px;
+  left: 25px
 }
 
 div.nextButton {
   position: relative;
-  top: 650px;
-  right: 350px
+  top: 25px;
+  right: 25px
+}
+
+p.regularText {
+  color: black;
+  font-family:'Oleo Script', cursive;
+  font-size: 25px;
+  padding: 20px;
+}
+
+div.hotels {
+  color: black;
+  font-family:'Oleo Script', cursive;
+  font-size: 50px;
+  padding: 20px;
 }
 
 .MuiCard-root {
