--- a/waiwai_frontend/waiwai/src/App.css
+++ b/waiwai_frontend/waiwai/src/App.css
@@ -1,59 +1,72 @@
-@import url('https://fonts.googleapis.com/css?family=Oleo+Script&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Oleo+Script&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .MuiPaper-rounded {
- padding: 20px;
- opacity: 0.5;
- width: 450px;
+  padding: 20px;
+  opacity: 0.5;
+  width: 450px;
 }
 
 div.prevButton {
   position: relative;
   top: 25px;
-  left: 25px
+  left: 25px;
 }
 
 div.nextButton {
   position: relative;
   top: 25px;
-  right: 25px
+  right: 25px;
 }
 
 div.itineraryButton {
   position: relative;
   top: 75px;
-  left: 25px
+  left: 25px;
 }
 
 p.regularText {
   color: black;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 25px;
   padding: 20px;
 }
 
 p.finalText {
   color: black;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
+  font-size: 35px;
+  padding: 20px;
+}
+
+h3.finalText {
+  color: black;
+  font-family: "Oleo Script", cursive;
   font-size: 35px;
   padding: 20px;
 }
 
 div.hotels {
   color: black;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 50px;
   padding: 20px;
 }
 
 div.billHeader {
   color: black;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 60px;
   margin-top: 40px;
 }
 
 .MuiCard-root {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .paperDiv {
@@ -61,7 +74,7 @@ div.billHeader {
 }
 
 .MuiFormControl {
-  padding: 20px
+  padding: 20px;
 }
 
 .link {
@@ -75,24 +88,24 @@ div.billHeader {
 
 form {
   color: white;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
 }
 
 form.bill {
   color: black;
-  font-family:'Oleo Script', cursive;
-  }
+  font-family: "Oleo Script", cursive;
+}
 
 div.create {
   color: black;
-  font-family:'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 50px;
   text-align: center;
   padding: 20px;
 }
 
 .login-signup {
-  font-family:'Roboto';
+  font-family: "Roboto";
 }
 
 .App {
@@ -122,41 +135,41 @@ div.create {
 
 div.app_name {
   padding: 0px;
-  text-align: center; 
-  font-family: 'Oleo Script', cursive;
+  text-align: center;
+  font-family: "Oleo Script", cursive;
   font-size: 200px;
   color: black;
 }
 
 div.subTitle {
   margin-bottom: 30px;
-  text-align: center; 
-  font-family: 'Oleo Script', cursive;
+  text-align: center;
+  font-family: "Oleo Script", cursive;
   font-size: 75px;
   color: black;
 }
 
 .title {
-  background-image: url('https://i.pinimg.com/originals/b4/51/70/b451702eef24e2c33a90ebcf7c7e9eb8.jpg');
+  background-image: url("https://i.pinimg.com/originals/b4/51/70/b451702eef24e2c33a90ebcf7c7e9eb8.jpg");
 }
 
 div.lineItemHeader {
   margin-bottom: 0px;
-  font-family: 'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 35px;
   color: black;
 }
 
 div.lineItemSubheader {
   margin-bottom: 20px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 23px;
   color: black;
 }
 
 div.billTitle {
   margin-bottom: 20px;
-  font-family: 'Oleo Script', cursive;
+  font-family: "Oleo Script", cursive;
   font-size: 75px;
   color: black;
   text-align: center;
